Display All Jobs

--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -19,7 +19,7 @@
 
 {% macro show_jobs(jobs) %}
 <div class="columns is-multiline">
-  {% for jobs in jobs %}
+  {% for job in jobs %}
   <div class="column is-half">
     {{ show_job(job)}}
     </div>
