Display All Jobs

--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -9,7 +9,7 @@
     <div class="content">
       <p>
         <a href="">{{ job['employer_name']}}</a><br>
-        ${{ job['employer_name']}}<br>
+        ${{ job['salary']}}<br>
         {{ job['description']}}
       </p>
     </div>
