Display Individual Jobs

--- a/jobs/templates/employer.html
+++ b/jobs/templates/employer.html
@@ -26,7 +26,7 @@
               <strong>{{ review['title']}}</strong>
               <small>{{ review['title']}}</small>
               <small>{{ review['title']}}</small>
-              {{ review['review']}}
+              {{ review['status']}}
           </div>
         </div>
       </article>
