Display Individual Employers

--- a/jobs/templates/employer.html
+++ b/jobs/templates/employer.html
@@ -24,9 +24,9 @@
           <div class="content">
             <p>
               <strong>{{ review['title']}}</strong>
-              <small>{{ review['title']}}</small>
-              <small>{{ review['title']}}</small>
-              {{ review['status']}}
+              <small>{{ review['status']}}</small>
+              <small>{{ review['date']}}</small>
+              {{ review['review']}}
           </div>
         </div>
       </article>
